Update 4-operaciones.md with Jenkins commands
Added example commands for accessing Jenkins container and retrieving initial admin password.